Update and rename trabalho.html to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="Trabalho.css" />
+    <link rel="stylesheet" href="trabalho.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
