--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </p>
             <br />
             <p>
-             <span1>MMB</span1> vem com funções super importantes para te facilitar na criação de suas musicas, disponivel para <span1>Andoid</span1> e <span1>ios</span1>
+             <span1>MMB</span1> vem com funções super importantes para te facilitar na criação de suas musicas, disponivel para <span1>Android</span1> e <span1>iOS</span1>
             </p>
             <br />
             <p>
@@ -110,7 +110,7 @@
             <p>
               Clique no <span>Botão</span> a baixo para receber um <span1>E-mail</span1> com a data de lançamento e o <span1>Link</span1> para baixar!
             </p>
-            <a class="button" href="#">Aguardando Lançamento</a>
+            <a class="button" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox/FMfcgzGlkXrTlRHpFdppXbrtdkRLjrhQ" target="_blank"><i class="icon-mail"></i>Aguardando Lançamento</a>
           </div>
         </div>
       </section>
@@ -132,7 +132,7 @@
             </h2>
             <p>
               Somos uma empresa séria focada no desenvolvimento de novas formas
-              de entreterimento que seja de divertida e de facil acesso.
+              de entretenimento que seja de divertida e de fácil acesso.
             </p>
             <br />
             <p>
@@ -141,10 +141,7 @@
             </p>
             <br />
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
-              exercitationem, illum sapiente quasi hic iusto odio maiores esse
-              quaerat quis necessitatibus at odit, dolores dicta, officia ab
-              quos. Provident, quae.
+              Estamos localizado no centro de Nova York, sendo uma das empresas que mais cresce não só no nosso, mas em todos os países graças o um bom relacionamento que temos com nossos clientes que já chega á mais de uma decada, estaremos sempre correndo atraz do seus desejos.
             </p>
           </div>
         </div>
@@ -156,7 +153,7 @@
       <section class="section" id="testimonials">
         <div class="container">
           <header>
-            <h2 class="title">Depoimentos de quem já testou o Aplicativo!</h2>
+            <h2 class="title">Depoimentos de clientes que se preparam para o Lançamento!</h2>
           </header>
           <div class="testimonials swiper-container">
             <div class="swiper-wrapper">
@@ -164,9 +161,8 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                    ipsam neque
+                    Como sempre pensando no cliente, nunca vi um app com a ideia parecida com essa, mas ja conheço a fama da empresa, uma das empresas mais proximas do cliente que já vi. 
+                  </p>
                   </p>
                   <cite>
                     <img
@@ -182,9 +178,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                    ipsam neque
+                    Já mandei o E-mail para a caixa-postal deles agora só esperar esse grande lançamento, vocês são fera.
                   </p>
                   <cite>
                     <img src="assets/fotos/46.jpg" alt="Foto de Gabriel Dias" />
@@ -197,9 +191,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                    ipsam neque
+                    Estou muito ancioso para o novo lançamento deles, uma turma nota 10, sempre acompanho novidades.  
                   </p>
                   <cite>
                     <img src="assets/fotos/47.jpg" alt="Fotos de Danilo Reis" />
@@ -280,6 +272,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- main.js -->
-    <script src="Trabalho.js"></script>
+    <script src="trabalho.js"></script>
   </body>
 </html>
