--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="trabalho.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -272,6 +272,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- main.js -->
-    <script src="trabalho.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
