--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </p>
             <br>
             <p>
-              Clique no <span>Botão</span> a baixo para receber um <span1>E-mail</span1> com a data de lançamento e o <span1>Link</span1> para baixar!
+              Mande uma mensaguem no nosso <span1>E-mail</span1> e clique no <span>Botão</span> a baixo para receber um <span1>E-mail</span1> com a data de lançamento e o <span1>Link</span1> para baixar!
             </p>
             <a class="button" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox/FMfcgzGlkXrTlRHpFdppXbrtdkRLjrhQ" target="_blank"><i class="icon-mail"></i>Aguardando Lançamento</a>
           </div>
@@ -230,7 +230,7 @@
             <ul class="grid">
               <li><i class="icon-phone"></i> 11 99845-6754</li>
               <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
-              <li><i class="icon-mail"></i> contato@musicboxmaker.com</li>
+              <li><i class="icon-mail"></i> musicboxmaker2021@gmail.com</li>
             </ul>
           </div>
         </div>
