--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <p>
               Mande uma mensaguem no nosso <span1>E-mail</span1> e clique no <span>Botão</span> a baixo para receber um <span1>E-mail</span1> com a data de lançamento e o <span1>Link</span1> para baixar!
             </p>
-            <a class="button" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox/FMfcgzGlkXrTlRHpFdppXbrtdkRLjrhQ" target="_blank"><i class="icon-mail"></i>Aguardando Lançamento</a>
+            <a class="button" href="https://mail.google.com/" target="_blank"><i class="icon-mail"></i>Aguardando Lançamento</a>
           </div>
         </div>
       </section>
